--- a/ILLUUSTRATUON.html
+++ b/ILLUUSTRATUON.html
@@ -2,6 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>PORTFOLIO SITE</title>
         <link rel="stylesheet" href="css/illustration-style.css">
         <link rel="stylesheet" href="css/style.css">
@@ -27,11 +28,11 @@
               <div id="home">
                 <header class="page-header">
                     <nav>
-                        <ul class="main-nav">
-                          <li><a href="index.html#ABOUT">ABOUT</a></li><!--現在地にはcurrentクラスを付ける-->
-                          <li><a href="index.html#WORKS">WORKS</a></li>
-                          <li><a href="index.html#CONTACT">CONTACT</a></li>
-                          </ul>
+                      <ul class="main-nav">
+                        <li><a href="index.html#ABOUT">ABOUT</a></li><!--現在地にはcurrentクラスを付ける-->
+                        <li><a href="index.html#WORKS">WORKS</a></li>
+                        <li><a href="index.html#CONTACT">CONTACT</a></li>
+                      </ul>
                     </nav>
                     <h2>ILLUSTRATION</h2>      
                 </header>
